<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/spacingM"
    android:paddingBottom="@dimen/spacingM"
    tools:ignore="MissingConstraints">

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="textDate, textTemp, textPressure, textHumidity, textDescription"
        app:flow_horizontalAlign="start"
        app:flow_horizontalBias="0"
        app:flow_horizontalGap="20dp"
        app:flow_maxElementsWrap="1"
        app:flow_verticalGap="20dp"
        app:flow_verticalStyle="packed"
        app:flow_wrapMode="chain" />

    <TextView
        android:id="@+id/textDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forecast_date" />

    <TextView
        android:id="@+id/textTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forecast_average_temperature" />

    <TextView
        android:id="@+id/textPressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forecast_pressure" />

    <TextView
        android:id="@+id/textHumidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forecast_humidity" />

    <TextView
        android:id="@+id/textDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forecast_description" />

</androidx.constraintlayout.widget.ConstraintLayout>