<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_city_hint"
        android:contentDescription="@string/input_city_description"
        app:layout_constraintBottom_toTopOf="@+id/buttonSearch"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/get_weather"
        android:contentDescription="@string/search_weather_description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputCity" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/weatherList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:background="@color/white"
        android:contentDescription="@string/the_forecast_list_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSearch" />


    <include
        android:id="@+id/viewEmpty"
        layout="@layout/layout_empty"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSearch" />

</androidx.constraintlayout.widget.ConstraintLayout>